example/src/snapshots/adze_example__regex_grammar__tests__regex_group_plus.snap
---
source: src/regex_grammar.rs
expression: "grammar::parse(\"(ab)+\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 1,
            end: 1,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 2,
            end: 2,
        },
        ParseError {
            reason: UnexpectedToken(
                ")",
            ),
            start: 3,
            end: 3,
        },
        ParseError {
            reason: UnexpectedToken(
                "\"+\"",
            ),
            start: 4,
            end: 4,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 5,
            end: 5,
        },
    ],
)
