example/src/snapshots/adze_example__regex_grammar__tests__regex_literal.snap
---
source: src/regex_grammar.rs
expression: "grammar::parse(\"a\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 0,
            end: 0,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 1,
            end: 1,
        },
    ],
)
